--- a/OOP-lab/OOP-lab.csproj
+++ b/OOP-lab/OOP-lab.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>OOP_lab</RootNamespace>
   </PropertyGroup>
 
 </Project>
